kubernetes/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  namespace: beautybay-product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: tutorialaya/beautybay-product-service:latest
          ports:
            - containerPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
  namespace: beautybay-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: tutorialaya/beautybay-cart-service:latest
          ports:
            - containerPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: beautybay-order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: tutorialaya/beautybay-order-service:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: beautybay-product
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30081
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: beautybay-cart
spec:
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: beautybay-order
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: LoadBalancer
