kubernetes/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: beautybay
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"  # Kong strips the route prefix from the request
spec:
  rules:
    - host: beautybay.locale
    - http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 9000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 9000
