kubernetes/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: beautybay-order
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: beautybay.locale
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9000
